# docs/openapi.json
@@ -4899,6 +4899,28 @@
             ],
             "title": "Error"
           },
+          "reason": {
+            "anyOf": [
+              {
+                "type": "string"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Reason"
+          },
+          "resource_metadata": {
+            "anyOf": [
+              {
+                "type": "string"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Resource Metadata"
+          },
           "source": {
             "type": "string",
             "title": "Source",
